ros2_ws/log/build_2024-10-08_01-09-30/lidar_seg/stderr.log
  File "/home/ubuntu/Internship/ros2_ws/install/lidar_seg/lib/python3.10/site-packages/lidar_seg/listener_test.py", line 87
    if (!(i&1)):
        ^
SyntaxError: invalid syntax

